testsuite/tests/properties/invalid_new_node/not_memoized.lkt
import common

class LiteralList: ASTList[FooNode, Literal] {
    fun prop(): EmptyNode = EmptyNode()
}
